# stm32-with-rust-demo

./: .gitignore  Cargo.toml  Embed.toml  README.md  memory.x
.cargo/: config.toml
.github/workflows/: rust.yml
src/: main.rs
